samples/_failures_safe/1761307360_b38727_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6189365a.c: In function ‘main’:
./samples/SAFE/__tmp_6189365a.c:186:5: error: expected expression at end of input
  186 |     if (len > 0 && input[len -
      |     ^~
./samples/SAFE/__tmp_6189365a.c:186:5: error: expected declaration or statement at end of input
